introduce type for testCase, create package for mark classes